refactor: finish core simplification
